Ajusta teste de integração quebrados com XML e YAML de PersonController.