@@ -2,6 +2,7 @@ package br.com.erudio.integrationtests.controllers.withyaml;
 
 import br.com.erudio.config.TestConfigs;
 import br.com.erudio.integrationtests.dto.PersonDTO;
+import br.com.erudio.integrationtests.dto.wrappers.xml.PagedModelPerson;
 import br.com.erudio.integrationtests.testcontainers.AbstractIntegrationTest;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -194,28 +195,29 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
                     .statusCode(200)
                 .extract().body().asString();
 
-        List<PersonDTO> people = yamlMapper.readValue(content, new TypeReference<List<PersonDTO>>() {});
+        PagedModelPerson wrapper = yamlMapper.readValue(content, PagedModelPerson.class);
+        List<PersonDTO> people = wrapper.getContent();
 
         PersonDTO personFive = people.get(5);
 
         assertNotNull(personFive.getId());
         assertTrue(personFive.getId() > 0);
 
-        assertEquals("Nelson", personFive.getFirstName());
-        assertEquals("Mandela", personFive.getLastName());
-        assertEquals("Mvezo - South Africa", personFive.getAddress());
-        assertEquals("Male", personFive.getGender());
-        assertTrue(personFive.getEnabled());
+        assertEquals("Addia", personFive.getFirstName());
+        assertEquals("Marklund", personFive.getLastName());
+        assertEquals("0212 Arkansas Way", personFive.getAddress());
+        assertEquals("Female", personFive.getGender());
+        assertFalse(personFive.getEnabled());
 
-        PersonDTO personOne = people.getFirst();
+        PersonDTO personOne = people.get(0);
 
         assertNotNull(personOne.getId());
         assertTrue(personOne.getId() > 0);
 
-        assertEquals("Ayrton", personOne.getFirstName());
-        assertEquals("Senna", personOne.getLastName());
-        assertEquals("São Paulo - Brasil", personOne.getAddress());
-        assertEquals("Male", personOne.getGender());
+        assertEquals("Abagail", personOne.getFirstName());
+        assertEquals("Sessions", personOne.getLastName());
+        assertEquals("4486 Warrior Center", personOne.getAddress());
+        assertEquals("Female", personOne.getGender());
         assertTrue(personOne.getEnabled());
 
     }
